# monix

./: .env.example  .gitignore  AGENDT.md  AGENT.md  LICENSE  LLM.md  PRD.md  README.ko.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/generate-tests/: SKILL.md
docs/: agent-safety-model.md  server-install.md
docs/issues/: 001-document-current-folder-structure.md  002-compare-agent-cli-project-structures.md  003-nginx-docker-log-monitoring.md  003-replace-mascot-with-robot-character.md  004-log-tools-improvements.md  004-ui-agent-runtime-redesign.md
monix/: __init__.py  __main__.py  assistant.py  cli.py  mcp.py  monitor.py  picker.py  render.py
monix/config/: __init__.py  keystore.py  settings.py
monix/core/: __init__.py  assistant.py
monix/llm/: __init__.py  anthropic.py  client.py  executor.py  gemini.py  masker.py  prompts.py  registry.py  runner.py  trimmer.py  types.py
monix/llm/providers/: codex.py
monix/llm/tests/: test_client.py  test_codex_provider.py  test_executor.py  test_masker.py  test_prompts.py  test_runner.py  (+2 more)
monix/safety/: __init__.py  policy.py
monix/tools/: __init__.py  calling.py  collect.py  config_actions.py  logs.py  processes.py  services.py  system.py
tests/: test_cli_input.py  test_docker_command.py  test_mcp.py  test_monitor.py  test_picker.py  test_provider_setup.py
tests/tools/: test_collect.py  test_config_actions.py  test_cpu.py  test_logs_app.py  test_logs_docker.py  test_logs_nginx.py  test_logs_registry.py  test_logs_search.py  test_processes.py  test_services.py  test_system_metrics.py
(+24 files in other folders)
