[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monix"
version = "0.1.0"
description = "Gemini-powered terminal assistant for server monitoring"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Monix" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
monix = "monix.cli:main"

[tool.setuptools.packages.find]
include = ["monix*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
